force-app/main/default/objects/ApplicationItem__c/ApplicationItem__c.object-meta.xml
<CustomObject>
    <label>ApplicationItem</label>
    <nameField>
        <label>ApplicationItem No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApplicationItems</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>