force-app/main/default/objects/ApplicationItem__c/fields/Balance_Applied_Days__c.field-meta.xml
<CustomField>
    <fullName>Balance_Applied_Days__c</fullName>
    <description>Exactly how many days this request took out of its balance, stamped at approval and cleared when the approval is undone. Reversal gives back this figure rather than recalculating from Leave_Days__c, which can be edited after approval and then no longer matches what was actually deducted. Blank means nothing has been applied.</description>
    <inlineHelpText>Days actually deducted from the balance. Set on approval, cleared if the approval is undone. Do not edit.</inlineHelpText>
    <label>Balance Applied Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>