force-app/main/default/objects/ApplicationItem__c/fields/Carry_Over_Days_Used__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Days_Used__c</fullName>
    <description>How many of this request&apos;s days were taken from the carry-over pool rather than the current year. Written when the request is approved. Current-year days derive as No_of_Days__c minus this value, so a cancelled request can be reversed back into the correct pool.</description>
    <label>Carry Over Days Used</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>