force-app/main/default/objects/ApplicationItem__c/fields/Converted_By__c.field-meta.xml
<CustomField>
    <fullName>Converted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who converted the unpaid days to Annual leave. Not always the owner: the conversion is available to anyone who may view the employee&apos;s timesheet, so the person who made the correction is recorded separately from the person the leave belongs to.</description>
    <inlineHelpText>Who performed the unpaid leave conversion. Set automatically.</inlineHelpText>
    <label>Converted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Converted Leave Requests</relationshipLabel>
    <relationshipName>Converted_Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>