force-app/main/default/objects/ApplicationItem__c/fields/Converted_From_Status__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Status__c</fullName>
    <description>What the unpaid request was — Draft or Approved — at the moment its days were converted to Annual leave. Reverting a conversion has to put the days back as they were, and once the source has been rejected and replaced nothing else on the record can say whether they had been approved. Guessing would either re-grant days nobody signed for or take away days somebody did.</description>
    <inlineHelpText>The status the unpaid days held before they were converted. Set automatically.</inlineHelpText>
    <label>Converted From Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>