force-app/main/default/objects/ApplicationItem__c/fields/Converted_From_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Unpaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set on the paid request raised by converting Unpaid leave days back to Annual leave. Split From points at the Unpaid request the days came out of. Without this marker a converted record is indistinguishable from the unpaid continuation of a split, which is the opposite kind of record.</description>
    <inlineHelpText>Ticked when this request was raised by converting unpaid days to Annual leave. Set automatically.</inlineHelpText>
    <label>Converted From Unpaid</label>
    <type>Checkbox</type>
</CustomField>