force-app/main/default/objects/ApplicationItem__c/fields/Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The balance row this request draws on, stamped when it is approved. Gives every Leave Balance record a related list of the requests that consumed it. Resolved from owner, leave type and year - the same key the deduction uses - so the link and the arithmetic can never point at different rows.</description>
    <inlineHelpText>The leave balance this request was deducted from. Set automatically on approval.</inlineHelpText>
    <label>Leave Balance</label>
    <referenceTo>Leave_Balance__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>