force-app/main/default/objects/ApplicationItem__c/fields/LWOP_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>LWOP_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who approved the unpaid days. Stamped by LeaveWithoutPayService from the running user when LWOP Status moves to Approved, and cleared when it moves away again, so it can never name someone who did not perform the approval. SetNull because Restrict and Cascade are not permitted on a lookup to User.</description>
    <label>LWOP Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leave Without Pay Approvals</relationshipLabel>
    <relationshipName>LWOP_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>