force-app/main/default/objects/ApplicationItem__c/fields/LWOP_Approved_Days__c.field-meta.xml
<CustomField>
    <fullName>LWOP_Approved_Days__c</fullName>
    <description>How many unpaid days the Managing Director actually signed off. Kept separate from LWOP Days so that lengthening an already-approved request cannot smuggle extra unpaid days through an old approval: LeaveWithoutPayService reverts the request to Pending MD Approval whenever LWOP Days grows past this figure.</description>
    <label>LWOP Approved Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>