force-app/main/default/objects/ApplicationItem__c/fields/LWOP_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>LWOP_Approved_On__c</fullName>
    <description>When the unpaid days were approved. Stamped and cleared alongside LWOP Approved By.</description>
    <label>LWOP Approved On</label>
    <type>DateTime</type>
</CustomField>