force-app/main/default/objects/ApplicationItem__c/fields/LWOP_Days__c.field-meta.xml
<CustomField>
    <fullName>LWOP_Days__c</fullName>
    <description>How many of the requested days have no leave balance behind them. Calculated by LeaveWithoutPayService: provisionally on every save, authoritatively at approval. Only leave types with Counts Toward LWOP Check on their Leave Type Policy are assessed; every other type stays at zero.</description>
    <inlineHelpText>Days of this request that will be unpaid because the balance does not cover them. Calculated automatically - do not edit.</inlineHelpText>
    <label>Unpaid (LWOP) Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>