force-app/main/default/objects/ApplicationItem__c/fields/LWOP_Status__c.field-meta.xml
<CustomField>
    <fullName>LWOP_Status__c</fullName>
    <description>Where the unpaid portion of this request stands with the Managing Director. Driven by LeaveWithoutPayService: set to Pending MD Approval as soon as the balance falls short, and back to Not Required if the request is shortened so the balance covers it again. Only a user holding the Approve Leave Without Pay custom permission may move it to Approved or Rejected.</description>
    <inlineHelpText>Approval state of the unpaid days. Only the Managing Director can approve or reject.</inlineHelpText>
    <label>LWOP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending MD Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>