force-app/main/default/objects/ApplicationItem__c/fields/Manager_LastName__c.field-meta.xml
<CustomField>
    <fullName>Manager_LastName__c</fullName>
    <description>Make available for Leave Request Email Template.</description>
    <formula>Owner:User.Manager.LastName</formula>
    <label>Manager LastName</label>
    <type>Text</type>
</CustomField>