force-app/main/default/objects/ApplicationItem__c/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <formula>CASE( Period_Leave__c , &apos;All Day&apos;, 1, 0.5)</formula>
    <label>No. of Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>