force-app/main/default/objects/ApplicationItem__c/fields/OT_End__c.field-meta.xml
<CustomField>
    <fullName>OT_End__c</fullName>
    <description>When the overtime finished. Must be later in the day than OT Start: overtime running past midnight is rejected by the Overtime_End_After_Start validation rule rather than silently counted as negative hours.</description>
    <inlineHelpText>Time the overtime finished, for example 21:00. Must be later than OT Start on the same day.</inlineHelpText>
    <label>OT End</label>
    <type>Time</type>
</CustomField>