force-app/main/default/objects/ApplicationItem__c/fields/OT_Start__c.field-meta.xml
<CustomField>
    <fullName>OT_Start__c</fullName>
    <description>When the overtime began. Overtime Request record type only. Paired with OT End to give Overtime Hours, which is what an approval actually signs off.</description>
    <inlineHelpText>Time the overtime started, for example 18:00.</inlineHelpText>
    <label>OT Start</label>
    <type>Time</type>
</CustomField>