force-app/main/default/objects/ApplicationItem__c/fields/Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Hours__c</fullName>
    <description>Total overtime claimed by this request: the OT End minus OT Start window, multiplied by every date the request covers. Calculated by ApplicationItemTriggerLogic on every save, so the figure is right from Draft onward and the approver sees what they are signing. Only counted once the request is Approved.</description>
    <inlineHelpText>Total overtime hours claimed. Calculated from OT Start, OT End and the request dates - do not edit.</inlineHelpText>
    <label>Overtime Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>