force-app/main/default/objects/ApplicationItem__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName &amp; &apos;(&apos; &amp;  Owner:User.Alias  &amp; &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Name</label>
    <type>Text</type>
</CustomField>