force-app/main/default/objects/ApplicationItem__c/fields/Paid_Days__c.field-meta.xml
<CustomField>
    <fullName>Paid_Days__c</fullName>
    <description>The portion of the request that draws on the leave balance, for payroll. A formula rather than a stored value so it cannot drift from the two fields it is derived from.</description>
    <formula>BLANKVALUE(Leave_Days__c, 0) - BLANKVALUE(LWOP_Days__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>