force-app/main/default/objects/ApplicationItem__c/fields/Period_Leave__c.field-meta.xml
<CustomField>
    <fullName>Period_Leave__c</fullName>
    <label>Period Leave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All day</fullName>
            </value>
            <value>
                <fullName>AM leave</fullName>
            </value>
            <value>
                <fullName>PM leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>