force-app/main/default/objects/ApplicationItem__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The project these overtime hours were worked on. The hours are booked against it.</inlineHelpText>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>That project is closed. Choose a project that was still running when the overtime was worked.</errorMessage>
        <filterItems>
            <field>Project__c.Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Overtime Requests</relationshipLabel>
    <relationshipName>Overtime_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>