force-app/main/default/objects/ApplicationItem__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>