force-app/main/default/objects/ApplicationItem__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick leave</fullName>
            </value>
            <value>
                <fullName>Annual leave</fullName>
            </value>
            <value>
                <fullName>Personal leave</fullName>
            </value>
            <value>
                <fullName>Refresh Leave</fullName>
            </value>
            <value>
                <fullName>Bereavement leave</fullName>
            </value>
            <value>
                <fullName>Marriage leave</fullName>
            </value>
            <value>
                <fullName>Maternity leave</fullName>
            </value>
            <value>
                <fullName>Military service leave</fullName>
            </value>
            <value>
                <fullName>Ordination leave</fullName>
            </value>
            <value>
                <fullName>Sterilization leave</fullName>
            </value>
            <value>
                <fullName>Training or knowledge leave</fullName>
            </value>
            <value>
                <fullName>Unpaid leave</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>