force-app/main/default/objects/ApplicationItem__c/fields/Split_From__c.field-meta.xml
<CustomField>
    <fullName>Split_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set on an Unpaid leave record created automatically because the original request ran past the employee's balance. Points back at that original. Without it the two halves of one absence look like two unrelated requests, and nobody can tell the unpaid days were not asked for deliberately.</description>
    <inlineHelpText>The original request whose days ran past the available balance. Set automatically.</inlineHelpText>
    <label>Split From</label>
    <referenceTo>ApplicationItem__c</referenceTo>
    <relationshipLabel>Unpaid Continuation</relationshipLabel>
    <relationshipName>Split_Records</relationshipName>
    <type>Lookup</type>
</CustomField>