force-app/main/default/objects/ApplicationItem__c/fields/Term_From__c.field-meta.xml
<CustomField>
    <fullName>Term_From__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>