force-app/main/default/objects/ApplicationItem__c/fields/Term_To__c.field-meta.xml
<CustomField>
    <fullName>Term_To__c</fullName>
    <description>End date of the leave, inclusive. Blank means a single-day request and is treated as equal to Term_From__c, which keeps every pre-existing record valid. Leave requests may not span a calendar year - see the Leave_Request_No_Year_Span validation rule.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>