force-app/main/default/objects/ApplicationItem__c/recordTypes/Leave_Request.recordType-meta.xml
<RecordType>
    <fullName>Leave_Request</fullName>
    <active>true</active>
    <label>Leave Request</label>
</RecordType>