force-app/main/default/objects/ApplicationItem__c/recordTypes/Overtime_Request.recordType-meta.xml
<RecordType>
    <fullName>Overtime_Request</fullName>
    <active>true</active>
    <label>Overtime Request</label>
</RecordType>