force-app/main/default/objects/ApplicationItem__c/validationRules/Approved_Request_Is_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Request_Is_Locked</fullName>
    <active>true</active>
    <description>An approved request is settled: its balance is spent and its bookings exist. Editing it rewrote the day count without re-deducting, so record and balance drifted apart. Rejecting is allowed and reverses everything; deleting is too.</description>
    <errorConditionFormula>AND(
          NOT(ISNEW()),
          ISPICKVAL(PRIORVALUE(Status__c), &quot;Approved&quot;),
          NOT(ISPICKVAL(Status__c, &quot;Rejected&quot;))
        )</errorConditionFormula>
    <errorMessage>This request has been approved and cannot be changed. Reject it to release the balance and clear its calendar and timesheet entries, then raise a new request - or delete it.</errorMessage>
</ValidationRule>