force-app/main/default/objects/ApplicationItem__c/validationRules/Leave_Request_LWOP_Approval_Permission.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Request_LWOP_Approval_Permission</fullName>
    <active>true</active>
    <description>Only the Managing Director decides unpaid leave. ISNEW is included because ISCHANGED is false on insert, which would let a record be created already signed off. A custom permission, not a named user, so cover during absence is a permission set assignment.</description>
    <errorConditionFormula>
        AND(
          RecordType.DeveloperName &lt;&gt; "Overtime_Request",
          OR(ISNEW(), ISCHANGED(LWOP_Status__c)),
          OR(
            ISPICKVAL(LWOP_Status__c, "Approved"),
            ISPICKVAL(LWOP_Status__c, "Rejected")
          ),
          NOT($Permission.Approve_Leave_Without_Pay)
        )
    </errorConditionFormula>
    <errorDisplayField>LWOP_Status__c</errorDisplayField>
    <errorMessage>Only the Managing Director can approve or reject Leave Without Pay.</errorMessage>
</ValidationRule>