force-app/main/default/objects/ApplicationItem__c/validationRules/Leave_Request_LWOP_Needs_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Request_LWOP_Needs_Approval</fullName>
    <active>true</active>
    <description>A request with unpaid days cannot be approved until the Managing Director signs them off. LeaveWithoutPayService.settle enforces the same rule with exact figures. Scoped to the crossing into Approved, so later edits are not blocked.</description>
    <errorConditionFormula>
        AND(
          RecordType.DeveloperName &lt;&gt; "Overtime_Request",
          OR(ISNEW(), ISCHANGED(Status__c)),
          ISPICKVAL(Status__c, "Approved"),
          BLANKVALUE(LWOP_Days__c, 0) &gt; 0,
          NOT(ISPICKVAL(LWOP_Status__c, "Approved"))
        )
    </errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>This request has unpaid (LWOP) days. The Managing Director must approve the Leave Without Pay before the request can be approved.</errorMessage>
</ValidationRule>