force-app/main/default/objects/ApplicationItem__c/validationRules/Leave_Request_Probation_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Request_Probation_Block</fullName>
    <active>true</active>
    <description>Annual and Refreshment leave are locked during probation. Sick and statutory leave are not blocked - Thai law mandates paid sick leave. Scoped to saves that create or reshape the request, so it cannot block unrelated edits to historical records.</description>
    <errorConditionFormula>
        AND(
          RecordType.DeveloperName &lt;&gt; "Overtime_Request",
          OR(
            ISNEW(),
            ISCHANGED(Request_Type__c),
            ISCHANGED(Term_From__c),
            ISCHANGED(Term_To__c),
            ISCHANGED(Status__c)
          ),
          OR(
            ISPICKVAL(Request_Type__c, "Annual leave"),
            ISPICKVAL(Request_Type__c, "Refresh Leave")
          ),
          NOT(ISBLANK(Owner:User.Probation_End_Date__c)),
          Term_From__c &lt;= Owner:User.Probation_End_Date__c
        )
    </errorConditionFormula>
    <errorDisplayField>Term_From__c</errorDisplayField>
    <errorMessage>Annual and Refreshment leave are not available during the probation period. Accrued leave becomes available once probation is complete.</errorMessage>
</ValidationRule>