force-app/main/default/objects/ApplicationItem__c/validationRules/Leave_Request_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Request_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Leave_Request&quot;,
  OR(
    ISPICKVAL(Request_Type__c, &quot;&quot;),
    ISPICKVAL(Period_Leave__c, &quot;&quot;)
  )
)</errorConditionFormula>
    <errorMessage>Request Type and Period Leave are required on a Leave Request.</errorMessage>
</ValidationRule>