force-app/main/default/objects/ApplicationItem__c/validationRules/LeaveRequestCurrentDate_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>LeaveRequestCurrentDate_ValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Term_From__c &lt; TODAY(), ISBLANK(Remark__c) )</errorConditionFormula>
    <errorDisplayField>Remark__c</errorDisplayField>
    <errorMessage>Term From date is less than today. Please enter the value of Remark.</errorMessage>
</ValidationRule>