force-app/main/default/objects/ApplicationItem__c/validationRules/Overtime_Employee_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Overtime_Employee_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
          RecordType.DeveloperName = &quot;Overtime_Request&quot;,
          ISBLANK(Employee__c)
        )</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>Choose the Employee these overtime hours were worked by. The request is recorded against them, not against you.</errorMessage>
</ValidationRule>