force-app/main/default/objects/ApplicationItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Period_Leave__c</columns>
    <columns>Term_From__c</columns>
    <columns>Term_To__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Remark__c</columns>
    <filterScope>Everything</filterScope>
    <label>All ApplicationItems</label>
</ListView>