force-app/main/default/objects/ApplicationItem__c/listViews/All_Leave_Request.listView-meta.xml
<ListView>
    <fullName>All_Leave_Request</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Period_Leave__c</columns>
    <columns>Term_From__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leave Requests</label>
</ListView>