force-app/main/default/objects/ApplicationItem__c/listViews/Leave_Without_Pay_Approved.listView-meta.xml
<ListView>
    <fullName>Leave_Without_Pay_Approved</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Period_Leave__c</columns>
    <columns>Term_From__c</columns>
    <columns>Term_To__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Unpaid leave</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Leave Without Pay Approved</label>
    <sharedTo>
        <group>Managing_Director</group>
    </sharedTo>
</ListView>