force-app/main/default/objects/ApplicationItem__c/listViews/My_ApplicationItems.listView-meta.xml
<ListView>
    <fullName>My_ApplicationItems</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Period_Leave__c</columns>
    <columns>Term_From__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My ApplicationItems</label>
</ListView>