force-app/main/default/objects/ApplicationItem__c/listViews/Overtime_ApplicationItems.listView-meta.xml
<ListView>
    <fullName>Overtime_ApplicationItems</fullName>
    <columns>NAME</columns>
    <columns>OT_Start__c</columns>
    <columns>OT_End__c</columns>
    <columns>Overtime_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ApplicationItem__c.Overtime_Request</value>
    </filters>
    <label>Overtime ApplicationItems</label>
</ListView>